Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Daylight_Savings_End_Date__c</fullName>
        <description>The date when the daylight savings time ends.</description>
        <label>Daylight Savings End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daylight_Savings_End_Time__c</fullName>
        <label>Daylight Savings End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12AM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daylight_Savings_Start_Date__c</fullName>
        <description>The date when daylight savings time starts.</description>
        <label>Daylight Savings Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daylight_Savings_Start_Time__c</fullName>
        <label>Daylight Savings Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12AM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_First_Name__c</fullName>
        <label>Old First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Last_Name__c</fullName>
        <label>Old Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZMG__Zoomerang_Security_Token__c</fullName>
        <label>Zoomerang Security Token</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZMG__Zoomerang_User_ID__c</fullName>
        <label>Zoomerang User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_management__c</fullName>
        <label>Sales Management</label>
        <relationshipName>R00No0000000pc65EAA</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CustomerPortalUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>C,c</value>
        </filters>
        <label>Customer Portal Users</label>
    </listViews>
    <listViews>
        <fullName>PartnerUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>Partner Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>